Use Collapse component, fix tabs height

--- a/packages/docs-app/src/styles/_examples.scss
+++ b/packages/docs-app/src/styles/_examples.scss
@@ -533,6 +533,12 @@
   }
 }
 
+#{example("Section")} {
+  .docs-example {
+    align-items: start;
+  }
+}
+
 //
 // DATETIME
 //
